Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22765

Race condition in i_s_fts_index_cache_fill_one_index()

    XMLWordPrintable

Details

    Description

      This issue is an upstream bug of mysql#99458.
      i_s_fts_index_cache_fill_one_index() should have taken cache lock before accessing
      the fts index cache. It could result in reading stale data.

      Attachments

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            thiru Thirunarayanan Balathandayuthapani
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.