MDEV-22765  i_s_fts_index_cache_fill_one_index() is not protect by the lock

- i_s_fts_index_cache_fill() should take exclusive lock of fts cache
before accessing index cache to avoid reading stale data.