storage/innobase/handler/i_s.cc
@@ -3375,6 +3375,8 @@ no_fts:
 	conv_str.f_len = sizeof word;
 	conv_str.f_str = word;
 
+        rw_lock_x_lock(&cache->lock);
+
 	for (ulint i = 0; i < ib_vector_size(cache->indexes); i++) {
 		fts_index_cache_t*      index_cache;
 
@@ -3384,6 +3386,8 @@ no_fts:
 		BREAK_IF(ret = i_s_fts_index_cache_fill_one_index(
 				 index_cache, thd, &conv_str, tables));
 	}
+
+        rw_lock_x_unlock(&cache->lock);
 
 	dict_table_close(user_table, FALSE, FALSE);
 	rw_lock_s_unlock(&dict_operation_lock);
